[package]
name = "cockatoo"
version = "0.1.0-dev"
authors = ["Ben Woodcroft <benjwoodcroft@gmail.com>"]
license = "GPL-3.0"
description = "Strain-specific read coverage calculator for metagenomics"
#homepage = "https://github.com/wwood/cockatoo"
#repository = "https://github.com/wwood/cockatoo"
#documentation = "https://github.com/wwood/cockatoo"
readme = "README.md"
exclude = [ # Max upload is 10MB, as of writing test data was 15MB
  "tests/*",
]

[dependencies]
bio = "0.30.*"
clap = "2.*"
log = "0.4.*"
env_logger = "0.7.*"
tempdir = "0.3.*"
tempfile = "3.1.*"
ansi_term = "0.12"
rand = "0.7.*"
rayon = "1.0"
failure = "0.1"
crossbeam = "0.7.*"
serde = "1.0"
flate2 = "1.0"
# Possibly works with newer commits, but this was the newest at time of writing.
# But now specifying a commit leads to compilation errors, I think.
debruijn = { git = "https://github.com/10XGenomics/rust-debruijn" }#, rev = "55db496526015cb1374ba6c769cc0651210af854" }
boomphf = { git = "https://github.com/10XGenomics/rust-boomphf", rev = "9bd02ab72f06414c48e04d15e845221f6a4a45cf" }
# Use #13 branch so it compiles
#debruijn_mapping = { git = "https://github.com/10XGenomics/rust-pseudoaligner", rev = "27e24d3a6c4833de0021075faf7a1bbeb90d3139" }
# Needed so dbg_index isn't private
debruijn_mapping = { path = "ext/rust-pseudoaligner" }
snap = "0.2"
csv = "1.1"
rstar = "0.7"
finch = { git = "https://github.com/onecodex/finch-rs", rev = "5dc21d072c0bbd758532eff70871d101ed69e573" } # So mash_files can work in parallel. Presumably will be integrated in v0.3
seq_io = { git = "https://github.com/wwood/seq_io", rev = "62a21f22b915ee70495ba242c994ea2f5b3a024c" } # so can read gzip fastq files

[dev-dependencies]
assert_cli = "0.6.*"

[dependencies.bincode]
version = "1.1"
features = ["i128"]

[dependencies.partitions]
version = "0.2.*"
features = ["compact"]